
2016-10-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.h: re-fixed COB_ONCE for MSC
	* system.def: replaced octal by hex strings for hex-system routines

2016-10-02  Edward Hart <edward.dan.hart@gmail.com>

	* common.h: added cob_flags_t typedef for variables made of bit flags.

2016-08-24  Edward Hart <edward.dan.hart@gmail.com>

	* common.c (cob_get_current_date_and_time): fixed bug where milliseconds
	  where confused with nanoseconds.

2016-08-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c, common.h: new routine (cob_is_initialized)
	* common.c (cob_module_enter): activated storing module call parameters
	  on module entry

2016-08-16  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c (field_accept): fixed bug #300 (segfault on screen ACCEPT
	  OMITTED).

2016-08-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_runtime_error): reversed the prefix from runtime errors,
	  always starts with "libcob: " now
	* common.c (cob_get_strerror): own reentrant version of strerror
	* common.c (cob_load_config_file): use cob_get_strerror instead of
	  a guessed error message

2016-07-31  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_reg_sighnd): call cob_set_signal() if not done already

2016-07-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* coblocal.h: changed types in config_tbl to unsigned (compiler warnings)
	* common.h [_MSC_VER]: added definitions for COB_NOINLINE, COB_A_INLINE

2016-07-17  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c: added support for LINE/COL 0.
	* screenio.c: fixed small issues with DISPLAY ALL X"02" and X"07".

2016-06-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.h, coblocal.h: moved internal functions to coblocal as COB_HIDDEN
	* common.h: added COB_EXPIMP to cob_set_exception
	* common.c, coblocal.h: #ifdef 0 for unused helper functions