@@ -1,4 +1,8 @@
 
+2016-10-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* common.c: check "COB_UNIX_LF" before error COB_FERROR_INITIALIZED
+
 2016-10-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* common.h: re-fixed COB_ONCE for MSC
